// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Test Fbt Enum should handle functional enums (with references) (import default) 1`] = `
import { fbt } from "fbtee";
import aEnum from "Test$FbtEnum";
var x = fbt._(
  {
    id1: "Click to see groups",
    id2: "Click to see photos",
    id3: "Click to see videos",
  },
  [fbt._enum(id, aEnum)],
  {
    hk: "3SHnwE",
  }
);

`;

exports[`Test Fbt Enum should handle functional enums (with references) (import star) 1`] = `
import { fbt } from "fbtee";
import * as aEnum from "Test$FbtEnum";
var x = fbt._(
  {
    id1: "Click to see groups",
    id2: "Click to see photos",
    id3: "Click to see videos",
  },
  [fbt._enum(id, aEnum)],
  {
    hk: "3SHnwE",
  }
);

`;

exports[`Test Fbt Enum should handle functional enums (with references) (require) 1`] = `
import { fbt } from "fbtee";
import aEnum from "Test$FbtEnum";
var x = fbt._(
  {
    id1: "Click to see groups",
    id2: "Click to see photos",
    id3: "Click to see videos",
  },
  [fbt._enum(id, aEnum)],
  {
    hk: "3SHnwE",
  }
);

`;

exports[`Test Fbt Enum should handle functional enums (with references) in templates 1`] = `
import { fbt } from "fbtee";
import aEnum from "Test$FbtEnum";
var x = fbt._(
  {
    id1: "Click to see groups",
    id2: "Click to see photos",
    id3: "Click to see videos",
  },
  [fbt._enum(id, aEnum)],
  {
    hk: "3SHnwE",
  }
);

`;

exports[`Test Fbt Enum should handle jsx enums (with references) 1`] = `
import { fbt } from "fbtee";
import aEnum from "Test$FbtEnum";
var x = fbt._(
  {
    id1: "Click to see groups",
    id2: "Click to see photos",
    id3: "Click to see videos",
  },
  [fbt._enum(id, aEnum)],
  {
    hk: "3SHnwE",
  }
);

`;

exports[`Test Fbt Enum should handle jsx string literals 1`] = `
import { fbt } from "fbtee";
import aEnum from "Test$FbtEnum";
var x = fbt._(
  {
    id1: "Click to see groups",
    id2: "Click to see photos",
    id3: "Click to see videos",
  },
  [fbt._enum("id1", aEnum)],
  {
    hk: "3SHnwE",
  }
);

`;
